# FFGo

./: .gitattributes  .gitignore  COPYING.Sphinx  ChangeLog  MANIFEST.in  Makefile  README.rst  ffgo  ffgo-launcher.py  fgo  pyproject.toml  setup.py  shared.mk
data/config/: config_en  config_it  config_pl  presets
data/help/: .gitattributes  help_de  help_en  help_es  help_fr  help_it  help_ja  help_pl
data/locale/: .gitattributes  .gitignore  Makefile  Makefile.py-functions  messages.pot
data/pics/: COPYING.txt  Makefile  thumbnail.ppm  thumbnail.xcf
docs/: CHANGE_LOG  CHANGE_LOG.FGo!  INFORMATION_FOR_PACKAGERS  INFORMATION_FOR_TRANSLATORS
docs/INSTALL/: INSTALL_en
docs/README/: README_de  README_en  README_es  README_fr  README_it  README_ja  README_pl
docs/README.conditional-config/: README.conditional-config_en
docs/README.conditional-config.source/: Makefile  condconfig.rst  conf.py  index.rst  make.bat
ffgo/: common_transl.py  config.py  constants.py  exceptions.py  fgcmdbuilder.py  logging.py  main.py  misc.py  stats_manager.py  version.py
ffgo/fgdata/: __init__.py  aircraft.py  airport.py  apt_dat.py  fgversion.py  json_report.py  parking.py
ffgo/geo/: geodesy.py  magfield.py
ffgo/gui/: airport_finder.py  configwindow.py  gps_tool.py  infowindow.py  mainwindow.py  metar.py  pressure_converter.py  tooltip.py  widgets.py
other-licenses/: README.txt
share/: ffgo.desktop  fgo.desktop
share/icons/: COPYING.txt  Makefile  generate-bitmap-icons.sh
src/: __init__.py  config.py  constants.py  fgcmdbuilder.py  version.py
src/ffgo/: common_transl.py  config.py  constants.py  exceptions.py  fgcmdbuilder.py  logging.py  main.py  misc.py  stats_manager.py
src/gui/: metar.py  (+5 more)
(+79 files in other folders)
